# -dear-diary

./: .env.example  .gitignore  LICENSE  README-dear-diary.md  README.md
.cursor/rules/: dear-diary.mdc
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src/components/: AgentStrip.tsx  CogneeAura.tsx  CogneeMemoryLab.tsx  (+4 more)
apps/mobile/: .env.example  .gitignore  BUILD_APK.md  README.md  app.json  eas.json  expo-env.d.ts  package-lock.json  package.json
apps/mobile/android/: settings.gradle
apps/mobile/app/: _layout.tsx  bloom.tsx  capture.tsx  dashboard.tsx  index.tsx  lenses.tsx  memory.tsx  settings.tsx  witness.tsx
apps/mobile/components/: AgentStrip.tsx  AuroraBackground.tsx  CircularProgress.tsx  FilmStrip.tsx  GlassShatter.tsx  GraphCanvas.tsx  HeatmapCalendar.tsx  LiquidBlob.tsx  LiquidGlass.tsx  MemoryOrb.tsx  SparkAnimation.tsx
apps/mobile/constants/: theme.ts
apps/mobile/lib/: cognee.ts  media.ts  speechmatics.ts
docs/docs/planning/: 00-MASTER.md  02-STREAM-S1-memory.md  03-STREAM-S2-agent.md  04-STREAM-S3-voice.md  07-PRIORITIES.md  10-API-CONTRACT.md  11-PARALLEL-KICKOFF.md
docs/planning/: 01-STREAM-S0-shared.md  05-STREAM-S4-desktop-ui.md  06-STREAM-S5-lenses-patterns.md  08-STREAM-S6-seed-demo.md  09-INTEGRATION-GATES.md  90-SECOND-DEMO.md
scripts/: demo-reset.ps1  demo-reset.sh  start-api.ps1
services/api/: cognee_client.py  main.py  pyproject.toml  requirements.txt  schemas.py  seed_loader.py
services/api/agent/: memory_agent.py
(+22 files in other folders)
