[project]
name = "dear-diary-api"
version = "0.1.0"
description = "Dear Diary — Cognee-powered memory sidecar"
requires-python = ">=3.10"
dependencies = [
    "cognee",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "aiofiles>=24.0",
]

[tool.uvicorn]
app = "main:app"
host = "127.0.0.1"
port = 8787
